style(option): replace collect(Collectors.toList()) with toList()
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>